[gd_scene load_steps=6 format=2]

[ext_resource path="res://Dice.gd" type="Script" id=1]
[ext_resource path="res://Art/dieWhite1.png" type="Texture" id=2]
[ext_resource path="res://Audio/Dice_On_Create.mp3" type="AudioStream" id=3]
[ext_resource path="res://Audio/dice_pick_up.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Dice" type="Area2D" groups=["ClickPrio", "HideOnLoad"]]
z_index = 1
collision_layer = 2
collision_mask = 15
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="OnCreate" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="OnPickUp" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0
pitch_scale = 0.7

[node name="OnDropNoCard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 5.0
pitch_scale = 1.1

[connection signal="area_entered" from="." to="." method="_on_Dice_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Dice_area_exited"]
[connection signal="input_event" from="." to="." method="_on_Dice_input_event"]
